# NemoClaw

./: .gitignore  Dockerfile  Makefile  README.md
nemoclaw-blueprint/policies/: full-access.yaml  mcp-manifest.yaml
nemoclaw-blueprint/policies/mcp-servers/: apple-automation.yaml  coldstar.yaml  cpanel.yaml  fulfil.yaml  imessage.yaml  nvidia.yaml  ollama.yaml  shopify.yaml  solana.yaml
nemoclaw-engine/: Cargo.toml
nemoclaw-engine/src/: blueprint.rs  main.rs  protocol.rs  shell.rs  state.rs
nemoclaw-engine/src/actions/: apply.rs  mod.rs  plan.rs  rollback.rs  status.rs
nemoclaw/src/blueprint/: exec.ts
scripts/: demo.sh  nemoclaw-start.sh
